fixed texts and overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -175,8 +175,10 @@ h1,h2,h4,h5,h5,p{
 }
 .text-title{
   font-family: 'Courier New', Courier, monospace;
-  font-size:16px;
+  font-size:22px;
   font-weight: 900;
+  margin-bottom: 40px;
+  margin-top: 40px;
 }
 @media (max-width: 750px) {
   .step-container{
